[project]
name = "customersupport"
version = "0.1.0"
description = "customersupport using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7"
]

[project.scripts]
customersupport = "customersupport.main:run"
run_crew = "customersupport.main:run"
train = "customersupport.main:train"
replay = "customersupport.main:replay"
test = "customersupport.main:test"
run_with_trigger = "customersupport.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
